--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "fast-average-color": "^6.4.2",
     "hex-to-rgb": "^1.0.1",
     "ipfs-core": "^0.12.2",
+    "it-last": "^1.0.6",
     "it-to-stream": "^1.0.0",
     "jwt-decode": "^3.1.2",
     "patch-package": "^6.4.7",
